# dialogues

./: .env-template  README.md  pyproject.toml  pytest.ini
src/dialogues/: app.py  misc.py
test/: test_app.py
